--- a/welcome1.blade.html
+++ b/welcome1.blade.html
@@ -153,7 +153,7 @@
     </ul>
   </nav>
 
-  <audio src="//eyk-sound.mp3" autoplay loop></audio>
+  <!--<audio src="//eyk-sound.mp3" autoplay loop></audio>-->
 
   <!-- CONTEÚDO -->
   <main class="container" id="inicio">
